// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MyOverview /> renders correctly with error 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="dpd-content"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": "40rem",
      }
    }
  >
    You have no 
    Quotes
    .
  </div>,
]
`;

exports[`<MyOverview /> renders correctly with loading 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="loading -large"
      >
        <svg
          className="loading--svg"
          viewBox="-75 -75 150 150"
        >
          <circle
            className="loading--stroke"
            cx="0"
            cy="0"
            r="37.5"
          />
        </svg>
      </div>
    </div>
  </div>,
]
`;

exports[`<MyOverview /> renders orders correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Orders
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="choiceboxes -cols-3 -teal"
      >
        <button
          className="choicebox -active"
          onClick={[Function]}
          type="button"
        >
          All Orders
        </button>
      </div>
      <span
        className="text -regular -darker"
      >
        Showing 
        2
         Orders
      </span>
      <div
        className="select"
      >
        <select
          className="select--native"
          onChange={[Function]}
          value="availability_ASC"
        >
          <option
            disabled={true}
            value=""
          >
            Please Select
          </option>
          <option
            value="availability_ASC"
          >
            Newest To Oldest
          </option>
          <option
            value="availability_DESC"
          >
            Oldest To Newest
          </option>
          <option
            value="rate_DESC"
          >
            Price low to high
          </option>
          <option
            value="rate_ASC"
          >
            Price high to low
          </option>
        </select>
        <span
          className="icon select--chevron"
        >
          <i
            className="icon -stroke -dark"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-a
              </title>
              <polyline
                points="112 184 256 328 400 184"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </span>
      </div>
      <div
        className="row:cards-1col"
      />
    </div>
  </div>,
]
`;

exports[`<MyOverview /> renders quotes correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <span
        className="text -regular -darker"
      >
        Showing 
        2
         Orders
      </span>
      <div
        className="select"
      >
        <select
          className="select--native"
          onChange={[Function]}
          value="availability_ASC"
        >
          <option
            disabled={true}
            value=""
          >
            Please Select
          </option>
          <option
            value="availability_ASC"
          >
            Newest To Oldest
          </option>
          <option
            value="availability_DESC"
          >
            Oldest To Newest
          </option>
          <option
            value="rate_DESC"
          >
            Price low to high
          </option>
          <option
            value="rate_ASC"
          >
            Price high to low
          </option>
        </select>
        <span
          className="icon select--chevron"
        >
          <i
            className="icon -stroke -dark"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-a
              </title>
              <polyline
                points="112 184 256 328 400 184"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </span>
      </div>
      <div
        className="row:cards-1col"
      />
    </div>
  </div>,
]
`;
